--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "" # the subpath of your site, e.g. /blog
-title: "peifengMA" # the name of your site, e.g. ACME Corp.
-description: "a Jekyll theme for academia"
+url: "CV" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "Bio" # the subpath of your site, e.g. /blog
+title: "pf" # the name of your site, e.g. ACME Corp.
+theme: "Jekyll-theme-academia"
